test/fail/stability-parse-error2.mo
// those of stability.mo that are now parse errors
actor {
  flexible (); // reject
}

